[package]
name = "simpdiscover"
version = "0.4.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A simple library for UDP based service discovery"
license = "MIT"
repository = "https://github.com/andrewdavidmackenzie/simpdiscover/"
documentation = "https://github.com/andrewdavidmackenzie/simpdiscover/blob/master/README.md"
readme = "README.md"
edition = "2018"
keywords = ["discovery", "udp"]

[[bin]]
name = "announce"
path = "src/announce.rs"

[[bin]]
name = "listen"
path = "src/listen.rs"

[lib]
name = "simpdiscoverylib"
path = "src/lib/lib.rs"

[dependencies]
log = "0.4.6"
portpicker = "0.1.1"

simplog = "~1.5" # Only used by smaple binaries provided, not a dependency of the library
