[package]
name = "simpdiscover"
version = "0.6.2"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
description = "A simple library for UDP based service discovery"
license = "MIT"
repository = "https://github.com/andrewdavidmackenzie/simpdiscover/"
documentation = "https://github.com/andrewdavidmackenzie/simpdiscover/blob/master/README.md"
readme = "README.md"
edition = "2018"
keywords = ["discovery", "udp"]

[[bin]]
name = "announce"
path = "src/announce.rs"

[[bin]]
name = "listen"
path = "src/listen.rs"

[lib]
name = "simpdiscoverylib"
path = "src/lib/lib.rs"

[dependencies]
log = "0.4.6"
env_logger = "0.11.2"

[dev-dependencies]
portpicker = "0.1.1"
